--- a/AlphabetSoupCharity_Optimzation.ipynb
+++ b/AlphabetSoupCharity_Optimzation.ipynb
@@ -1161,7 +1161,7 @@
     "# Attempt #1: Loss: 0.5681890845298767, Accuracy: 0.7197667360305786 \n",
     "# Attempt #2: Loss: 0.5754483938217163, Accuracy: 0.7194169163703918, changed number of units in 1st & 2nd layers\n",
     "# Attempt #3: Loss: 0.5903772115707397, Accuracy: 0.7188338041305542, changed number of units in 1st & 2nd layers, \n",
-    "# added 3rd layer, deleted USE_CASE column, increased\n",
+    "# added 3rd layer, deleted USE_CASE column, slightly increased values for app_count & class_count.\n",
     "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
    ]
